--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contenido</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#ribbon">Descarga</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                 </ul>
             </div>
@@ -49,30 +48,139 @@
         </div>
     </div><!-- CAROUSEL-->
 
+    <!-- GAMES-->
+    <div id="games">
+      <div class="container-md p-5">
+        <div class="row pt-2">
+          <h3 class="text-center pb-2 pt-2 h1" style="color: white;" >Modulos de Aprendizaje</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                <div class="card w-100 card-border mb-5">
+                    <img src="img/card01.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Interpretar la implementación del Sistema de Gestión de Seguridad de la Norma ISO 27001.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm">
+                <div class="card w-100 card-border mb-5">
+                    <img src="img/card02.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Interpretar los conceptos, habilidades y métodos de controles de gestión del Sistema de Gestión de Seguridad de la información.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-sm">
+                <div class="card w-100 card-border mb-5">
+                    <img src="img/card03.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">El participante recibirá su certificado dentro de los 21 días aproximadamente luego de haber culminado el curso.</p>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+      </div>   
+
     <!-- RIBBON-->
     <div id="ribbon">
-        <div id="birthday" class="container w-40 pl-5 pr-5 rounded-lg">
-          <!-- slide -->
-          <div class="row align-items-center">
-            <div class="col-sm col-sm p-3" id="description">
-              <img src="img/image01.png" class="w-50 mx-auto d-block" alt="...">
-            </div>
-            
-            <div class="col-sm p-3 text-light text-center">
-              <p class="text-warning h3">Hoy</p>
-              <h4 class="h2 text-shadow">Aprende con nosotros</h4>
-              <h3><a href="#" >Descarga el Contenido del curso</a></h3>
-          </div><!-- SLIDE-->
-        </div>
-    </div><!-- RIBBON-->
+      <div id="birthday" class="container w-10 pl-5 pr-4 rounded-lg">
+        <!-- slide -->
+        <div class="row align-items-center">
+          <div class="col-sm col-sm p-3" id="description">
+            <img src="img/image01.png" class="w-20 mx-auto d-block" alt="...">
+          </div>           
+          <div class="col-sm p-2 text-light text-center">
+            <p class="text-warning h3">Hoy</p>
+            <h4 class="h2 text-shadow">Aprende con nosotros</h4>
+            <h3><a class="myButton" href="#" >Descarga el Contenido del curso</a></h3>
+        </div><!-- SLIDE-->
+      </div>
+  </div><!-- RIBBON-->
 
-   
+
+<!-- Play Nintendo-->
+<div id="play" >
+  <div class="container-sm p-5">
+    <h3 class="text-center h1" style="color: white;" >Nuestros Profesionales</h3>
+    <div class="row justify-content-center align-items-center">
+      <div class="col-9">
+        <div class="row justify-content-md-center">
+          <div class="col p-1">
+            <div class="card bg-primary text-white">   
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/ph-01.jpg" class="w-100"  alt="...">
+                </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Williams H. Jeffery</h5>
+                    <p class="card-text">Auditor líder - Especialista y certificador de ISO: 27001 (BSI), Ganador del premio CII India Digital Innovator 2017 .</p>
+                  </div><!--card-body-->
+                </div><!--col-->
+              </div><!--row-->
+            </div><!--CARD-->
+          </div><!--col-->
+          
+          <div class="col p-1">
+            <div class="card bg-warning text-white">   
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Nick E. Crosby</h5>
+                    <p class="card-text">Especialista de ISO: 27001 (BSI), TI de clase mundial en infraestrutura y soluciones de servicios.</p>
+                  </div><!--card-body-->
+                </div>
+                <div class="col-md-6">
+                  <img src="img/ph-02.jpg" class="w-100"  alt="...">
+                </div><!--col-->
+              </div><!--row-->
+            </div><!--CARD-->
+          </div>
+        </div>
+      <div class="row  justify-content-md-center">
+        <div class="col p-1">
+          <div class="card bg-warning text-white">   
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="img/ph-03.jpg" class="w-100"  alt="...">
+                </div>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Ellen X. Serafin</h5>
+                    <p class="card-text">Especialista de ISO: 27001 IT GC, Gestión de servicios de TI, Mejora de procesos Operacionales </p>
+                  </div><!--card-body-->
+                </div><!--col-->
+              </div><!--row-->
+            </div><!--CARD-->
+        </div>
+        <div class="col p-1">
+          <div class="card bg-primary text-white">   
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Kurt L. Echols</h5>
+                    <p class="card-text">Especialista de ISO: 27001 y  Gestión de servicios de TI, Mejora de procesos comerciales.</p>
+                  </div><!--card-body-->
+                </div>
+                <div class="col-md-6">
+                  <img src="img/ph-04.jpg" class="w-100"  alt="...">
+                </div><!--col-->
+              </div><!--row-->
+            </div><!--CARD-->
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
     <div id="footer" class="p-1">
       <div class="container w-50 pt-1">
         <div class="row justify-content-md-center py-1">
           <div class="col text-center font-weight-light">
-            <p>© Copyright 2021 by New Horizons Worldwide, LLC.</p>
+            <p style="color: white;">© Copyright 2021 by New Horizons Worldwide, LLC.</p>
           </div>
         </div>
         <div class="row"></div>
