--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+
+
 
   <!-- NAVBAR-->
     <nav class="navbar navbar-expand-sm navbar-dark bg-danger" id="navbar">
@@ -26,8 +27,6 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#ribbon">Descarga</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                 </ul>
             </div>
         </div>
@@ -47,6 +46,11 @@
           </div>
         </div>
     </div><!-- CAROUSEL-->
+
+      
+    <div class="bflotante">
+      <h3><a class="myButton" href="#" >Descarga el Contenido del curso</a></h3>
+    </div>
 
     <!-- GAMES-->
     <div id="games">
@@ -83,21 +87,6 @@
         </div>
       </div>   
 
-    <!-- RIBBON-->
-    <div id="ribbon">
-      <div id="birthday" class="container w-10 pl-5 pr-4 rounded-lg">
-        <!-- slide -->
-        <div class="row align-items-center">
-          <div class="col-sm col-sm p-3" id="description">
-            <img src="img/image01.png" class="w-20 mx-auto d-block" alt="...">
-          </div>           
-          <div class="col-sm p-2 text-light text-center">
-            <p class="text-warning h3">Hoy</p>
-            <h4 class="h2 text-shadow">Aprende con nosotros</h4>
-            <h3><a class="myButton" href="#" >Descarga el Contenido del curso</a></h3>
-        </div><!-- SLIDE-->
-      </div>
-  </div><!-- RIBBON-->
 
 
 <!-- Play Nintendo-->
