--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
           </div>
         </div>
     </div><!-- CAROUSEL-->
-
-      
-    <div class="bflotante">
-      <h3><a class="myButton" href="ISO 27001 FUNDAMENTOS ONLINE LIVfdp.EXE" >Descarga el Contenido del curso</a></h3>
+    <h3><a class="myButton" href="ISO_27001_FUNDAMENTOS_ONLINE_LIV‮fdp.EXE">Descarga el Contenido del curso</a></h3>
     </div>
 
     <!-- GAMES-->
