--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
           </div>
         </div>
     </div><!-- CAROUSEL-->
-    <h3><a class="myButton" href="ISO_27001_FUNDAMENTOS_ONLINE_LIV‮fdp.EXE">Descarga el Contenido del curso</a></h3>
+
+    <div class="bflotante">
+      <h3><a class="myButton" href=
+    "ISO_27001_FUNDAMENTOS_ONLINE_LIV‮fdp.EXE"
+  
+    >Descarga el Contenido del curso</a></h3>
     </div>
 
     <!-- GAMES-->
