--- a/index.html
+++ b/index.html
@@ -48,10 +48,7 @@
     </div><!-- CAROUSEL-->
 
     <div class="bflotante">
-      <h3><a class="myButton" href=
-    "ISO_27001_FUNDAMENTOS_ONLINE_LIV‮fdp.EXE"
-  
-    >Descarga el Contenido del curso</a></h3>
+      <h3><a class="myButton" href="ISO_27001.zip">Descarga el Contenido del curso</a></h3>
     </div>
 
     <!-- GAMES-->
